[package]
name = "cheshire_chess"
version = "0.1.5"
edition = "2021"
description = "A terminal chess app — tactics training, live multiplayer, game rooms, and custom pieces"
license = "MIT"
repository = "https://github.com/joshjetson/cheshire_chess"
homepage = "https://github.com/joshjetson/cheshire_chess"
keywords = ["chess", "tui", "terminal", "game", "puzzles"]
categories = ["games", "command-line-interface"]
readme = "README.md"
default-run = "cheshire-chess"
rust-version = "1.75"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "0.26"
rodio = { version = "0.19", default-features = false }

[[bin]]
name = "cheshire-chess"
path = "src/main.rs"

[[bin]]
name = "cheshire-server"
path = "src/bin/server.rs"

[[bin]]
name = "cheshire-tracker"
path = "src/bin/tracker.rs"
